RESOLVED FIXED199135
Incorrect clippping with overflow:scroll inside oveflow:hidden with border-radius
https://bugs.webkit.org/show_bug.cgi?id=199135
Summary Incorrect clippping with overflow:scroll inside oveflow:hidden with border-ra...
Simon Fraser (smfr)
Reported 2019-06-23 11:45:00 PDT
Incorrect clippping with overflow:scroll inside oveflow:hidden with border-radius
Attachments
Patch (9.69 KB, patch)
2019-06-25 21:33 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-06-25 21:33:32 PDT
WebKit Commit Bot
Comment 2 2019-06-26 12:12:46 PDT
Comment on attachment 372904 [details] Patch Clearing flags on attachment: 372904 Committed r246845: <https://trac.webkit.org/changeset/246845>
WebKit Commit Bot
Comment 3 2019-06-26 12:12:48 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4 2019-06-26 13:45:52 PDT
Note You need to log in before you can comment on or make changes to this bug.